# libcpputils

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  manage.sh  mediamtx.yaml
.kreya/: devenv.krenv  directory.krpref  readme.md  sscc.krproj
build_win/libcpputils/: libcpputils.sln
build_win/libcpputils/cpputils_static/: cpputils_static.vcxproj  cpputils_static.vcxproj.filters
build_win/libcpputils/cpputils_unittests/: cpputils_unittests.vcxproj  cpputils_unittests.vcxproj.filters
build_win/libcpputils/sec-chat-client-cli/: sec-chat-client-cli.vcxproj
build_win/libcpputils/sec-chat-client-ui/: sec-chat-client-ui.vcxproj
build_win/libcpputils/sec-chat-server/: sec-chat-server.vcxproj  sec-chat-server.vcxproj.filters
code/: settings.json
code/app/: CMakeLists.txt  settings.json
code/app/include/: constants.h.in  server.h  server_cmd_args.h  server_constants.h.in
code/app/include/av/: packet_broadcaster.h  recording_session.h  rtsp_injest_session.h  stream_broadcaster.h  stream_manager.h
code/app/include/db/: database.h  entity.h
code/app/include/db/io/: camera_repository.h  event_repository.h  recording_repository.h  stream_repository.h
code/app/include/db/models/: _traits.h  camera.h  event.h  recording.h  storage_location.h  stream.h  video_object.h
code/app/include/interfaces/: av.h  db.h  node.h  rpc.h  serializer.h  storage.h  validator.h
code/app/include/rpc/server/: camera.h  event_dispatch.h  streaming_service.h
code/app/include/storage/: gcs_storage_sink.h  local_storage_sink.h
code/app/src/: database.cpp  main.cpp  server.cpp  server_cmd_args.cpp
code/app/src/av/: packet_broadcaster.cpp  recording_session.cpp  rtsp_injest_session.cpp  stream_broadcaster.cpp  stream_manager.cpp
code/app/src/db/: database.cpp
code/app/src/db/io/: camera_repository.cpp  event_repository.cpp  recording_repository.cpp  stream_repository.cpp
code/app/src/rpc/server/: camera.cpp  event_dispatch.cpp  streaming_service.cpp
code/apps/sec-chat/client/: CMakeLists.txt
code/apps/sec-chat/client-cli/: CMakeLists.txt  settings.json
code/apps/sec-chat/client-cli/etc/: ecc.private.pem  ecc.public.pem
code/apps/sec-chat/client-cli/include/: client.h  client_cmd_args.h  constants.h.in
code/apps/sec-chat/client-cli/src/: client.cpp  client_cmd_args.cpp  main.cpp
code/apps/sec-chat/client-ui/: CMakeLists.txt
code/apps/sec-chat/client-ui/include/: main_window.h
code/apps/sec-chat/client-ui/src/: help_dialog.cpp  main.cpp  main_window.cpp
code/apps/sec-chat/client/include/: client_cmd_args.h
code/apps/sec-chat/client/src/: client_cmd_args.cpp  main.cpp
code/apps/sec-chat/server/: CMakeLists.txt  Dockerfile  settings.json
code/apps/sec-chat/server/etc/: cert.pem  ecc.private.pem  ecc.public.pem  key.pem  server-ca.pem
code/apps/sec-fdisk/: CMakeLists.txt
code/apps/sec-fdisk/include/: main_window.h
code/apps/sec-fdisk/src/: help_dialog.meta.cpp  main.cpp  main_window.meta.cpp
code/client/: CMakeLists.txt  settings.json
code/client/include/: fingerprint.h  help_dialog.h
code/client/include/ui/: help_dialog.h  main_window.h  profile_crud_dialog.h
code/client/src/: fingerprint.cpp  help_dialog.cpp  main.cpp  main_window.cpp
code/client/src/ui/: help_dialog.cpp  main_window.cpp  profile_crud_dialog.cpp
code/ext/jwt-cpp/: jwt.h
code/include/: constants.h
code/lib/: CMakeLists.txt
code/lib/include/: aes.h  base58.h  base64.h  bchain.h  bitset.h  btree.h  certificate.h  certificate_builder.h  certificate_store.h  chacha.h  crypto_common.h  des3.h  dh.h  ecc.h  ecdsa.h  ed25519.h  file.h  graph_search.h  hash.h  hex.h  llist.h  macros.h  p12_repository.h  pkcs12_manager.h  private_key.h  rsa.h  sc_transceiver.h  string_helpers.h  trust_store.h  uuid.h  wallet.h
code/lib/include/sc/: address_book.h  chat.h  contact.h  message.h  router.h  transceiver.h
code/lib/src/: CMakeLists.txt  aes.cpp  base58.cpp  base64.cpp  bitset.cpp  btree.cpp  certificate.cpp  certificate_builder.cpp  certificate_store.cpp  chacha.cpp  crypto_common.cpp  des3.cpp  dh.cpp  ecc.cpp  ecdsa.cpp  ed25519.cpp  file.cpp  graph_search.cpp  hash.cpp  hex.cpp  p12_repository.cpp  pkcs12_manager.cpp  private_key.cpp  rsa.cpp  sc_transceiver.cpp  string_helpers.cpp  trust_store.cpp  uuid.cpp  wallet.cpp
code/lib/src/sc/: address_book.cpp  chat.cpp  contact.cpp  message.cpp  router.cpp  stream.cpp  transceiver.cpp
code/server/: CMakeLists.txt  settings.json
code/server/include/: constants.h  database.h  server.h  server_cmd_args.h  server_constants.h
code/server/src/: database.cpp  main.cpp  server.cpp  server_cmd_args.cpp
code/tests/component/: CMakeLists.txt
code/tests/component/src/: main.cpp
code/tests/unit/: CMakeLists.txt
code/tests/unit/data/: aes.key  aes2.key
code/tests/unit/src/: main.cpp  runner.cpp  runner.h  test_sets.h
code/tests/unit/src/tests/: aes_tests.cpp  aes_tests.h  b58_tests.cpp  b58_tests.h  b64_tests.cpp  b64_tests.h  bchain_tests.cpp  bchain_tests.h  bitset_tests.cpp  bitset_tests.h  btree_tests.cpp  btree_tests.h  certificate_builder_tests.cpp  certificate_builder_tests.h  certificate_tests.cpp  certificate_tests.h  chacha_tests.cpp  chacha_tests.h  des3_tests.cpp  des3_tests.h  dh_tests.cpp  dh_tests.h  ecc_tests.cpp  ecc_tests.h  ecdsa_tests.cpp  ecdsa_tests.h  ed25519_tests.cpp  ed25519_tests.h  graph_search_tests.cpp  graph_search_tests.h  hash_tests.cpp  hash_tests.h  hex_tests.cpp  hex_tests.h  llist_tests.cpp  llist_tests.h  p12_repository_tests.cpp  pkcs12_manager_tests.cpp  private_key_tests.cpp  rsa_tests.cpp  (+9 more)
code/web/: index.html
dep/ext/: zip_file.h
dep/openpgp/include/Compress/: Compress.h
dep/openpgp/include/Misc/: sigtypes.h
dep/windows/x86/: jsoncpp_static.lib
deployment/docker/gcloud-broker/: Dockerfile  broker.sh
deployment/docker/gcloud-cpp/: Dockerfile  vcpkg-configuration.json  vcpkg.json
etc/: db.schema.sql
svc-definitions/: _models.proto  broadcast.proto  camera.proto  camera_control.proto  common.proto  event_dispatch.proto  streaming.proto
(+6 files in other folders)
